# ece555-presentation

./: README.md
code/: rust-toolchain
code/cpu/fractals/: Cargo.toml
code/cpu/fractals/src/: main.rs
code/cpu/mandelbrot/: Cargo.toml  build.rs  set-llvm-config
code/cpu/mandelbrot/src/: main.rs
code/cpu/pi/: Cargo.toml  build.rs
code/cpu/pi/src/: main.rs
code/cpu/zoomable/: Cargo.toml  build.rs
code/cpu/zoomable/src/: main.rs
code/gpu/fractals/: Cargo.toml
code/gpu/fractals/src/: lib.rs
code/gpu/mandelbrot/: Cargo.toml
code/gpu/mandelbrot/src/: lib.rs
code/gpu/pi/: Cargo.toml
code/gpu/pi/src/: lib.rs
code/mandelbrot/: Cargo.toml
deliverables/: .gitignore
deliverables/report/: results-table-c.tex
deliverables/slides/: macros.tex  preamble.tex  slides.tex
report/: macros.tex  preamble.tex  report.tex  results-table-rs.tex
slides/: .gitignore  color.tex  preamble.tex  refs.bib  slides.tex
slides/code-snippets-rs/: Cargo.toml
slides/code-snippets-rs/src/: cats.rs  main.rs  project_1_example.rs
