[package]
name = "fractals"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
image = "0.25.5"
ndarray = {version = "0.16.1", features=["rayon"]}
num = "0.4.3"

vek = { version = "0.17.1", features = ["bytemuck", "mint"] }

# Rust-CUDA dependencies
cust = { version = "0.3", path = "/home/kdcadet/code/Rust-CUDA/crates/cust" }
nanorand = "0.6.1"

# We don't depend on these directly, but want to pin them to specific versions.
# This is because we're bound to a specific rustc version but cargo will chose
# the newest semver compatible versions anyway.
log = "=0.4.17"
regex-syntax = "=0.6.28"
regex = "=1.11.1"
thread_local = "=1.1.4"
jobserver = "=0.1.25"
cc = "=1.0.78"
rayon = "=1.10"
rayon-core = "=1.12.1"
byteorder = "=1.4.0"
anyhow = "1.0.97"

[build-dependencies]
cuda_builder = { version = "0.3", path = "/home/kdcadet/code/Rust-CUDA/crates/cuda_builder" }
